--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -13500,7 +13500,7 @@
 					<key>page78 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:35Z</date>
+						<date>2019-08-20T15:59:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13545,6 +13545,126 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
+							<key>files/stacks-image-2968668-150x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								D+xnE6kc8lIE
+								b1KBcd97/A==
+								</data>
+								<key>Size</key>
+								<integer>11777</integer>
+							</dict>
+							<key>files/stacks-image-2968668-150x150@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nZDDRkpmcO0I
+								+NAo+m476A==
+								</data>
+								<key>Size</key>
+								<integer>34905</integer>
+							</dict>
+							<key>files/stacks-image-61fe2fb-148x138.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DJgt0jKFDJ4b
+								Fn/odNe+pg==
+								</data>
+								<key>Size</key>
+								<integer>6526</integer>
+							</dict>
+							<key>files/stacks-image-61fe2fb-148x138@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3UWGr+U5dzYk
+								nhJsZy+SQw==
+								</data>
+								<key>Size</key>
+								<integer>18305</integer>
+							</dict>
+							<key>files/stacks-image-7d9976e-150x128.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Wz4B5PSzp5CP
+								ZTzl9L2bsA==
+								</data>
+								<key>Size</key>
+								<integer>20634</integer>
+							</dict>
+							<key>files/stacks-image-7d9976e-150x128@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1ViXyayIaoxU
+								tqymwClHHA==
+								</data>
+								<key>Size</key>
+								<integer>63491</integer>
+							</dict>
+							<key>files/stacks-image-7e48fa7-148x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DDw+Vqr/eNhe
+								0tRtnlCqEQ==
+								</data>
+								<key>Size</key>
+								<integer>25681</integer>
+							</dict>
+							<key>files/stacks-image-7e48fa7-148x150@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								th9R1aMnNop7
+								6M3i0IkyQw==
+								</data>
+								<key>Size</key>
+								<integer>83593</integer>
+							</dict>
+							<key>files/stacks-image-8e88332-100x104.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								HU9N9ocudZ8O
+								ypHw3ik3hA==
+								</data>
+								<key>Size</key>
+								<integer>15274</integer>
+							</dict>
+							<key>files/stacks-image-8e88332-100x104@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YE+dgcrhhdU3
+								9lbeQWrQig==
+								</data>
+								<key>Size</key>
+								<integer>50137</integer>
+							</dict>
+							<key>files/stacks-image-cc75d0b-150x138.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								skaUCcqiaV40
+								BjAmCIP0vw==
+								</data>
+								<key>Size</key>
+								<integer>21531</integer>
+							</dict>
+							<key>files/stacks-image-cc75d0b-150x138@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P2WhNfZNh37D
+								+/EldxphRg==
+								</data>
+								<key>Size</key>
+								<integer>67264</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -13559,11 +13679,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AIQtld6rYtZy
-								kg3TLY9WQw==
+								mEtDKV7upymj
+								NEHLrop6nA==
 								</data>
 								<key>Size</key>
-								<integer>116531</integer>
+								<integer>133796</integer>
 							</dict>
 							<key>files/stacks_page_page78.js</key>
 							<dict>
@@ -13579,11 +13699,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								28vIzD9Mtwed
-								slbDvKbzAQ==
+								cdz/MUC+lHCX
+								jwQBOM9JSA==
 								</data>
 								<key>Size</key>
-								<integer>50132</integer>
+								<integer>66583</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15262,7 +15382,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T18:27:59Z</date>
+						<date>2019-08-20T15:59:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15291,11 +15411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HkiLIExxW1OY
-								qlg7NLx73g==
+								/0lDSeNss+dI
+								q5UyZQPRyw==
 								</data>
 								<key>Size</key>
-								<integer>7872</integer>
+								<integer>5952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15374,7 +15494,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:34Z</date>
+						<date>2019-08-20T15:59:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16453,11 +16573,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								r3yu/cnSifoJ
-								3IA/x3xENA==
+								NkaLF5nQqK+N
+								9asJTYc/0Q==
 								</data>
 								<key>Size</key>
-								<integer>4681</integer>
+								<integer>3904</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16611,7 +16731,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGFkNjCbPSADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGGKC72nWuADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16621,14 +16741,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYWQ2MJt
-				i4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYYoLvad
+				+YAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBhZDYwm3O
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBhigu9p4s
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16638,7 +16758,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBhZDYwm3wgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBhigu9p5WgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16648,7 +16768,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBhZDYwm4igAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBhigu9p5vgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
