--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/ChildPages/6-ALife-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:35Z</date>
+						<date>2019-08-20T15:59:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -80,6 +80,126 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
+							<key>files/stacks-image-2968668-150x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								D+xnE6kc8lIE
+								b1KBcd97/A==
+								</data>
+								<key>Size</key>
+								<integer>11777</integer>
+							</dict>
+							<key>files/stacks-image-2968668-150x150@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								nZDDRkpmcO0I
+								+NAo+m476A==
+								</data>
+								<key>Size</key>
+								<integer>34905</integer>
+							</dict>
+							<key>files/stacks-image-61fe2fb-148x138.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DJgt0jKFDJ4b
+								Fn/odNe+pg==
+								</data>
+								<key>Size</key>
+								<integer>6526</integer>
+							</dict>
+							<key>files/stacks-image-61fe2fb-148x138@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3UWGr+U5dzYk
+								nhJsZy+SQw==
+								</data>
+								<key>Size</key>
+								<integer>18305</integer>
+							</dict>
+							<key>files/stacks-image-7d9976e-150x128.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Wz4B5PSzp5CP
+								ZTzl9L2bsA==
+								</data>
+								<key>Size</key>
+								<integer>20634</integer>
+							</dict>
+							<key>files/stacks-image-7d9976e-150x128@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1ViXyayIaoxU
+								tqymwClHHA==
+								</data>
+								<key>Size</key>
+								<integer>63491</integer>
+							</dict>
+							<key>files/stacks-image-7e48fa7-148x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DDw+Vqr/eNhe
+								0tRtnlCqEQ==
+								</data>
+								<key>Size</key>
+								<integer>25681</integer>
+							</dict>
+							<key>files/stacks-image-7e48fa7-148x150@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								th9R1aMnNop7
+								6M3i0IkyQw==
+								</data>
+								<key>Size</key>
+								<integer>83593</integer>
+							</dict>
+							<key>files/stacks-image-8e88332-100x104.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								HU9N9ocudZ8O
+								ypHw3ik3hA==
+								</data>
+								<key>Size</key>
+								<integer>15274</integer>
+							</dict>
+							<key>files/stacks-image-8e88332-100x104@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YE+dgcrhhdU3
+								9lbeQWrQig==
+								</data>
+								<key>Size</key>
+								<integer>50137</integer>
+							</dict>
+							<key>files/stacks-image-cc75d0b-150x138.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								skaUCcqiaV40
+								BjAmCIP0vw==
+								</data>
+								<key>Size</key>
+								<integer>21531</integer>
+							</dict>
+							<key>files/stacks-image-cc75d0b-150x138@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P2WhNfZNh37D
+								+/EldxphRg==
+								</data>
+								<key>Size</key>
+								<integer>67264</integer>
+							</dict>
 							<key>files/stacks-image-e97f241-400x164.png</key>
 							<dict>
 								<key>Digest</key>
@@ -94,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AIQtld6rYtZy
-								kg3TLY9WQw==
+								mEtDKV7upymj
+								NEHLrop6nA==
 								</data>
 								<key>Size</key>
-								<integer>116531</integer>
+								<integer>133796</integer>
 							</dict>
 							<key>files/stacks_page_page78.js</key>
 							<dict>
@@ -114,11 +234,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								28vIzD9Mtwed
-								slbDvKbzAQ==
+								cdz/MUC+lHCX
+								jwQBOM9JSA==
 								</data>
 								<key>Size</key>
-								<integer>50132</integer>
+								<integer>66583</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
