--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/12-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/12-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:35Z</date>
+						<date>2019-08-23T23:47:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CWtClyhkfHNK
-								/J0NEmAX3w==
+								GVVjq64h+iqY
+								fgLOYT2aiw==
 								</data>
 								<key>Size</key>
-								<integer>36874</integer>
+								<integer>36882</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
