--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6886,7 +6886,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:59:00Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7035,11 +7035,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8wR45qZ+NGDB
-								J5hOUXHQFg==
+								7w6QlfA57rtR
+								wHi/+3eGYg==
 								</data>
 								<key>Size</key>
-								<integer>88582</integer>
+								<integer>88631</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10776,7 +10776,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:59:00Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10865,11 +10865,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BsVQ4LNU+jxc
-								tr2p7+4B6Q==
+								RcQL6LcW96ff
+								YnoghXjzJg==
 								</data>
 								<key>Size</key>
-								<integer>55071</integer>
+								<integer>55120</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12442,7 +12442,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:59:00Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12721,11 +12721,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MU7esV4/pWTJ
-								PPRPFOK9aQ==
+								4J8tZL2apG0S
+								rItKTbqvGA==
 								</data>
 								<key>Size</key>
-								<integer>95246</integer>
+								<integer>95295</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15382,7 +15382,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:06:52Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15411,11 +15411,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HQ3YDs1Ag9Ax
-								oDa2h+pRaA==
+								/0lDSeNss+dI
+								q5UyZQPRyw==
 								</data>
 								<key>Size</key>
-								<integer>6048</integer>
+								<integer>5952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15494,7 +15494,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:06:52Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -16573,11 +16573,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u2lsbCaD4NWt
-								XebZdJjTsw==
+								FtIevPlLs5AU
+								zRJnYIufkw==
 								</data>
 								<key>Size</key>
-								<integer>4681</integer>
+								<integer>3904</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -16731,7 +16731,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGKMbsqu5mADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcGKNSXdRSiADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16741,14 +16741,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYoxuyq8
-				H4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwYo1Jd1F
+				noAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBijG7KrxB
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBijUl3UW/
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16758,7 +16758,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBijG7KrxagAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBijUl3UXYgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16768,7 +16768,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBijG7Krx7gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBijUl3UXpgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
