--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:59:00Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -182,11 +182,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8wR45qZ+NGDB
-								J5hOUXHQFg==
+								7w6QlfA57rtR
+								wHi/+3eGYg==
 								</data>
 								<key>Size</key>
-								<integer>88582</integer>
+								<integer>88631</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
