--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:59:00Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MU7esV4/pWTJ
-								PPRPFOK9aQ==
+								4J8tZL2apG0S
+								rItKTbqvGA==
 								</data>
 								<key>Size</key>
-								<integer>95246</integer>
+								<integer>95295</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
