--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T18:59:00Z</date>
+						<date>2019-08-26T19:28:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BsVQ4LNU+jxc
-								tr2p7+4B6Q==
+								RcQL6LcW96ff
+								YnoghXjzJg==
 								</data>
 								<key>Size</key>
-								<integer>55071</integer>
+								<integer>55120</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
