--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T19:28:09Z</date>
+						<date>2019-08-27T15:44:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -52,11 +52,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFHf9zniv4SK
-								z9ywIWAR7Q==
+								kDQdTd/TojTe
+								5RskwegNJw==
 								</data>
 								<key>Size</key>
-								<integer>124861</integer>
+								<integer>361514</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -312,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4J8tZL2apG0S
-								rItKTbqvGA==
+								c41N3mfWJNoX
+								KlbJ/6/Gag==
 								</data>
 								<key>Size</key>
-								<integer>95295</integer>
+								<integer>95328</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
