--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-26T19:28:09Z</date>
+						<date>2019-08-27T15:44:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -54,11 +54,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZFHf9zniv4SK
-								z9ywIWAR7Q==
+								kDQdTd/TojTe
+								5RskwegNJw==
 								</data>
 								<key>Size</key>
-								<integer>124861</integer>
+								<integer>361514</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190.png</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RcQL6LcW96ff
-								YnoghXjzJg==
+								Zr+6r+u87526
+								vUEHoN/b2g==
 								</data>
 								<key>Size</key>
-								<integer>55120</integer>
+								<integer>55153</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
